<resources>
    <string name="app_name">Personal Trainer</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <string name="log_in_to">Log in to \nPersonal Trainer</string>
    <string name="log_in">Log in</string>
    <string name="create_account_title">Create your account</string>
    <string name="signin_already_have_an_account">Have an account already?</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="save">Save</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="signup">Sign up</string>

</resources>
