<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
        name="signupViewModel"
        type="com.skowronsky.personaltrainer.auth.signup.SignupViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/titleText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:text="@string/create_account_title"
            android:textColor="@color/colorTitleBlack"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/prompt_username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/titleText"
            app:layout_constraintStart_toStartOf="@+id/titleText"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/prompt_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="@string/prompt_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/signup_btn"
            style="@style/Widget.AppCompat.Button.Colored.RoundedButton"
            android:layout_width="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/signup"
            app:layout_constraintEnd_toEndOf="@+id/titleText"
            app:layout_constraintStart_toStartOf="@+id/titleText"
            app:layout_constraintTop_toBottomOf="@+id/password" />


        <TextView
            android:id="@+id/navigationText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/signin_already_have_an_account"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/titleText" />

        <TextView
            android:id="@+id/login_text_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/log_in"
            android:textColor="@color/hyperLink"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/navigationText"
            app:layout_constraintStart_toEndOf="@+id/navigationText" />



    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>