<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.skowronsky.personaltrainer.auth.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!--            android:text="@={loginViewModel.email}"-->

        <!--            android:text="@={loginViewModel.password}"-->

        <EditText
            android:id="@+id/username"
            android:hint="@string/email"
            android:text="@={loginViewModel.login}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/titleText"
            app:layout_constraintTop_toBottomOf="@+id/titleText" />

        <EditText
            android:id="@+id/password"
            android:hint="@string/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/username"
            app:layout_constraintStart_toStartOf="@+id/username"
            app:layout_constraintTop_toBottomOf="@+id/username" />

        <!--            android:onClick="@{() -> loginViewModel.setLogin()}"-->

        <Button
            android:id="@+id/login_btn_login"
            style="@style/Widget.AppCompat.Button.Colored.RoundedButton"
            android:text="@string/log_in"
            android:onClick="@{() -> loginViewModel.eventLoginStart()}"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/titleText"
            android:textColor="@color/colorTitleBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@string/log_in_to"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <!--            android:text="@string/log_in_to_snkrs"-->
        <!--            android:textColor="@color/colorTitleBlack"-->


        <TextView
            android:id="@+id/navigationText"
            android:text="@string/don_t_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/titleText" />

        <TextView
            android:id="@+id/signupTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/signup"
            android:textColor="@color/hyperLink"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="@+id/navigationText"
            app:layout_constraintStart_toEndOf="@+id/navigationText" />



        <!--            android:onClick="@{() -> loginViewModel.setEventNavToSignup()}"-->

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>